--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -8,7 +8,7 @@
     <a class="btn btn-success m-0 shadow-lg text-white rounded-pill me-2" href="{{ path('admin_new_category')}}" style="background-color: #5964A1;">Ajouter une catégorie</a>
     <a class="btn btn-success m-0 shadow-lg text-white rounded-pill" href="{{ path('admin_new_article')}}" style="background-color: #5964A1;">Ajouter un article</a>
 </div>
-    <h1>Category index</h1>
+    <h1>Sections en ligne</h1>
 
     <table class="table">
         <thead>
@@ -37,13 +37,13 @@
         </tbody>
     </table>
 
+    <h1>Articles en ligne</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Titre</th>
-                <th>Contenu</th>
                 <th>Section</th>
                 <th>Consulter</th>
                 <th>Modifier</th>
@@ -55,7 +55,6 @@
             <tr>
                 <td>{{ article.id }}</td>
                 <td>{{ article.title }}</td>
-                <td>{{ article.content }}</td>
                 <td>{{ article.category.title }}</td>
                 <td><a class="btn btn-success m-0 shadow-lg text-white" href="{{ path('app_article_show', {'id': article.id}) }}">Consulter</a></td>
                 <td><a class="btn btn-success m-0 shadow-lg text-white" href="{{ path('admin_edit_article', {'id': article.id}) }}">Modifier</a></td>
