--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,3 +12,9 @@ $light: #ffffff;
 .navbar-logo {
     height: 45px;
 }
+
+.frame {
+    border: 5px solid #00ACB0;
+    padding: 10px;
+    border-radius: 5px;
+}
