--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
 <div class="container">
     <div>
-    <a class="btn btn-success m-0 shadow-lg text-white rounded-pill me-2" href="{{ path('admin_new_category')}}" style="background-color: #5964A1;">Ajouter une catégorie</a>
-    <a class="btn btn-success m-0 shadow-lg text-white rounded-pill" href="{{ path('admin_new_article')}}" style="background-color: #5964A1;">Ajouter un article</a>
+    <a class="btn btn-success m-0 shadow-lg text-white rounded-pill mt-3 mb-4" href="{{ path('admin_new_category')}}" style="background-color: #5964A1;">Ajouter une catégorie</a>
+    <a class="btn btn-success m-0 shadow-lg text-white rounded-pill mt-3 mb-4" href="{{ path('admin_new_article')}}" style="background-color: #5964A1;">Ajouter un article</a>
 </div>
     <h1>Sections en ligne</h1>
 
