--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -4,12 +4,10 @@
 
 {% block body %}
 
-
-
-  <div class="container">
-    <div class="row d-flex flex-wrap-reverse flex-md">
-        <div class="col-12 col-md-9 col-xl-10">
-            <div class="my-3 card h-100 shadow-lg p-3">
+<div class="container d-flex mx-auto justify-content-center my-5 ">
+    <div class="row d-flex mx-auto flex-wrap-reverse flex-md">
+        <div class=" mx-auto col-12 col-md-11 ">
+            <div class="my-3 card shadow-lg p-3">
                 <h1 class="text-center">{{article.title}}</h1>
                 <hr class="m-1">
                 <p>{{article.content|raw}}</p>
@@ -18,9 +16,9 @@
     </div>
 </div>
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+<a href="{{ path('app_article_index') }}">back to list</a>
 
-    <a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
+<a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
 
-    {{ include('article/_delete_form.html.twig') }}
+{{ include('article/_delete_form.html.twig') }}
 {% endblock %}
