--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Category{% endblock %}
 
 {% block body %}
-    <h1>Category</h1>
-
-    <div class="row row-cols-1 row-cols-md-2 justify-content-center row-cols-xl-3 g-2 mx-2">
+   
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center g-5 mx-auto my-5">
         {% for article in category.articles %}
         <div class="col">
             <div class="card h-100 shadow-lg p-2">
-                <div class="card-body  d-flex flex-column">
+                <div class="card-body d-flex flex-column">
                     <h3 class="card-title fs-2">{{ article.title }}</h3>
                     <p>{{ article.content|striptags|u.truncate(100, '...', false) |raw }}</p>                  
                 </div>
@@ -19,10 +19,11 @@
         </div>
         {% endfor %}
     </div>
-
+</div>
     <a href="{{ path('app_category_index') }}">back to list</a>
 
     <a href="{{ path('app_category_show', {'id': category.id}) }}">edit</a>
 
     {{ include('category/_delete_form.html.twig') }}
+
 {% endblock %}
