--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,7 +2,7 @@ $primary: #00ACB0;
 $light: #ffffff;
 $secondary: #F8F4F4;
 $dark: #5964A1;
-
+$info: #D9D9D9;
 @import "wcs";
 
 @import "~bootstrap/scss/bootstrap";
@@ -25,6 +25,34 @@ $dark: #5964A1;
 }
 
 .card-body {
-    border: 2px solid $primary;
     height: 15rem;
+}
+
+.card {
+    width: 240px;
+}
+
+.icon svg {
+    color: #5964A1;
+    margin-top: 5px;
+}
+
+.card-bdy-mobile {
+    height: 10rem;
+
+}
+
+.card-text+.btn {
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.btn-pic {
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.img-bloc img {
+    width: 48.7vw;
+    height: 400px;
 }
