--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -3,9 +3,8 @@
 {% block title %}Article{% endblock %}
 
 {% block body %}
-<a class="btn btn-success m-0 shadow-lg text-white rounded-pill me-2" style="background-color: #5964A1;" href="{{ path('app_category_show', {'id': article.category.id}) }}">Retour</a>
 
-<div class="container d-flex mx-auto justify-content-center my-5 ">
+<div class="container d-flex mx-auto justify-content-center mt-4 mb-1 ">
     <div class="row d-flex mx-auto flex-wrap-reverse flex-md">
         <div class=" mx-auto col-12 col-md-11 ">
             <div class="my-3 card shadow-lg p-3">
@@ -25,4 +24,6 @@
         </div>
     </div>
 </div>
+
+<a class="btn btn-success m-0 shadow-lg text-white rounded-pill me-2 bg-dark mb-2" href="{{ path('app_category_show', {'id': article.category.id}) }}">Retour</a>
 {% endblock %}
