--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %} Lexique {%
+{% extends 'baseNoSwup.html.twig' %} {% block title %} Lexique {%
 endblock %} {% block body %}
 
 <img
