--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1>Edit Article</h1>
+    <h1 class="display-4 text-center mt-2">Modifier l'article</h1>
     <div class="d-flex justify-content-center">
         <div class="col-9 col-md-6">
             <div class="p-2 my-5 shadow-lg rounded-2">
