--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Category{% endblock %}
 
 {% block body %}
-    <h1>Edit Category</h1>
+    <h1 class="display-4 text-center mt-2">Modifier la catégorie</h1>
     <div class="d-flex justify-content-center">
         <div class="col-9 col-md-6">
             <div class="p-2 my-5 shadow-lg rounded-2">
